--- a/index.xhtml
+++ b/index.xhtml
@@ -4,6 +4,8 @@
     <head>
         <title>LD37 - by Rialgar</title>
         <script type="application/javascript" src="Grains.js"></script>
+        <script type="application/javascript" src="Bullet.js"></script>
+        <script type="application/javascript" src="Player.js"></script>
         <script type="application/javascript" src="main.js"></script>
         <style>
             html, body {
