--- a/index.xhtml
+++ b/index.xhtml
@@ -6,6 +6,7 @@
         <script type="application/javascript" src="Grains.js"></script>
         <script type="application/javascript" src="Bullet.js"></script>
         <script type="application/javascript" src="Player.js"></script>
+        <script type="application/javascript" src="Enemy.js"></script>
         <script type="application/javascript" src="main.js"></script>
         <style>
             html, body {
