made enemies more fancy and improved performance

--- a/index.xhtml
+++ b/index.xhtml
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
         <title>LD37 - by Rialgar</title>
+        <script type="application/javascript" src="CanvasProvider.js"></script>
         <script type="application/javascript" src="Grains.js"></script>
         <script type="application/javascript" src="Bullet.js"></script>
         <script type="application/javascript" src="Player.js"></script>
