--- a/index.xhtml
+++ b/index.xhtml
@@ -5,6 +5,7 @@
         <title>LD37 - by Rialgar</title>
         <script type="application/javascript" src="CanvasProvider.js"></script>
         <script type="application/javascript" src="Grains.js"></script>
+        <script type="application/javascript" src="Pickup.js"></script>
         <script type="application/javascript" src="Bullet.js"></script>
         <script type="application/javascript" src="Player.js"></script>
         <script type="application/javascript" src="Enemy.js"></script>
