--- a/index.xhtml
+++ b/index.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
     <head>
-        <title>LD37 - by Rialgar</title>
+        <title>Pixelshooter - by Rialgar</title>
         <script type="application/javascript" src="CanvasProvider.js"></script>
         <script type="application/javascript" src="Grains.js"></script>
         <script type="application/javascript" src="Pickup.js"></script>
